--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,50 +8,37 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <!-- SearchView -->
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/search_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            android:minHeight="?attr/actionBarSize"
-            app:title="Search Example">
-
-            <ListView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/listview"/>
-
-            <androidx.appcompat.widget.SearchView
-                android:id="@+id/search_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:iconifiedByDefault="false"
-                android:queryHint="Search"
-                android:background="@android:color/transparent"
-                app:iconifiedByDefault="false"
-                app:queryHint="Search"
-                app:showAsAction="ifRoom|collapseActionView" />
-
-        </androidx.appcompat.widget.Toolbar>
-
         <!-- ImageSlider -->
         <com.denzcoskun.imageslider.ImageSlider
             android:id="@+id/image_slider"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:layout_below="@id/search_toolbar"
             android:layout_marginTop="8dp"
             app:iss_auto_cycle="true"
             app:iss_delay="1000"
             app:iss_period="2000" />
 
-        <!-- Content below ImageSlider -->
-        <LinearLayout
+        <!-- AutoCompleteTextView for dropdown -->
+        <AutoCompleteTextView
+            android:id="@+id/autoCompleteTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_below="@id/image_slider" />
+            android:layout_below="@id/image_slider"
+            android:layout_marginTop="8dp"
+            android:background="@android:color/transparent"
+            android:completionThreshold="1"
+            android:dropDownHeight="wrap_content"
+            android:dropDownVerticalOffset="5dp"
+            android:dropDownWidth="match_parent"
+            android:padding="8dp" />
+
+        <!-- ListView for displaying content -->
+        <ListView
+            android:id="@+id/listview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/autoCompleteTextView"
+            android:layout_marginTop="8dp" />
 
     </RelativeLayout>
 </androidx.core.widget.NestedScrollView>
