--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,7 +2,9 @@
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".HomeFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -19,26 +21,7 @@
             app:iss_period="2000" />
 
         <!-- AutoCompleteTextView for dropdown -->
-        <AutoCompleteTextView
-            android:id="@+id/autoCompleteTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/image_slider"
-            android:layout_marginTop="8dp"
-            android:background="@android:color/transparent"
-            android:completionThreshold="1"
-            android:dropDownHeight="wrap_content"
-            android:dropDownVerticalOffset="5dp"
-            android:dropDownWidth="match_parent"
-            android:padding="8dp" />
 
-        <!-- ListView for displaying content -->
-        <ListView
-            android:id="@+id/listview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/autoCompleteTextView"
-            android:layout_marginTop="8dp" />
 
     </RelativeLayout>
 </androidx.core.widget.NestedScrollView>
