--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,42 +6,35 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <!-- Search Toolbar -->
-
-    <!-- ListView for displaying content -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/search_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            android:minHeight="?attr/actionBarSize"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:title="Search Example" />
-
-<!--        <AutoCompleteTextView-->
-<!--            android:id="@+id/autoCompleteTextView"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:background="@android:color/transparent"-->
-<!--            android:completionThreshold="1"-->
-<!--            android:dropDownWidth="match_parent"-->
-<!--            android:dropDownHeight="wrap_content"-->
-<!--            android:dropDownVerticalOffset="5dp"-->
-<!--            android:padding="8dp"-->
-<!--            tools:layout_editor_absoluteY="8dp" />-->
-
-        <ListView
-            android:id="@+id/listview"
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/searchView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:queryHint="Search"
+            android:iconifiedByDefault="false"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:clickable="true"
+            android:layout_margin="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/search_toolbar" />
+            app:layout_constraintTop_toTopOf="parent" />
+        <ListView
+            android:id="@+id/searchListView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/frameLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/searchView"
+            app:layout_constraintVertical_bias="0.0"
+            android:visibility="gone" />
 
         <FrameLayout
             android:id="@+id/frameLayout"
@@ -50,11 +42,8 @@
             android:layout_height="0dp"
             app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/search_toolbar"
-            app:layout_constraintVertical_bias="1.0">
-
+            app:layout_constraintTop_toBottomOf="@+id/searchListView">
         </FrameLayout>
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -64,10 +53,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:menu="@menu/bottom_navmenu"/>
+            app:menu="@menu/bottom_navmenu" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <!-- FrameLayout for Fragments -->
 
 </RelativeLayout>
