--- a/app/src/main/res/layout/fragment_dog_food.xml
+++ b/app/src/main/res/layout/fragment_dog_food.xml
@@ -1,14 +1,22 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- Dog food items layout -->
     <TextView
         android:id="@+id/dog_food_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Dog Food Items"
         android:textSize="20sp"
-        android:layout_centerInParent="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/popularItemsRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/dog_food_text"
+        android:layout_marginTop="16dp"/>
 </RelativeLayout>
+
+
